Remove sidebar collapsing in docs. Fixes #19

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -41,7 +41,7 @@
 			ul {
 				margin: 0 0 0 15px;
 			}
-			li {
+			li, li:last-child {
 				border: none;
 			}
 			span {
